# OANA-Offline-Ai-and-Note-Assistant

./: .gitignore  BUILD.md  README.md  USAGE.py  app.py  build_exe.py  build_installer.py  check_dependencies.py  config.json  demo.py  download_model.bat  download_models.py  install.bat  launch_oana.py  requirements.txt  setup.py  setup_complete.bat  setup_unix.sh  setup_windows.bat  start.bat  start_backend.bat  start_frontend.bat  start_oana.bat  start_oana.ps1  test.py  test_buttons.py  test_responsive.py  test_ui.py  user_settings.json
backend/: app.py  config.py  requirements.compatible.txt  requirements.txt
backend/modules/: embeddings.py  llm.py  parser.py  rag.py  vector_store.py
data/: oana.db
data/chat_history/: chat_20250906_195331.json  chat_20250906_210823.json
data/documents/: .gitkeep
data/embeddings/: .gitkeep
data/models/: .gitkeep
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  theme.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/api/: chat.js  documents.js  models.js  study.js
frontend/src/components/: AppLayout.jsx  ConversationHistory.jsx  StudyTools.jsx
frontend/src/pages/: Chat.jsx  Dashboard.jsx  NotFound.jsx  Settings.jsx  Upload.jsx
utils/: ai_engine.py  database.py  docx_parser.py  pdf_parser.py  summarizer.py
